Added index and show for Accounts

--- a/revel_mysql/conf/app.conf
+++ b/revel_mysql/conf/app.conf
@@ -7,7 +7,7 @@
 
 # This sets the `AppName` variable which can be used in your code as
 #   `if revel.AppName {...}`
-app.name = revel_mysql
+app.name = Revel Mysql
 
 # A secret string which is passed to cryptographically sign the cookie to prevent
 # (and detect) user modification.
@@ -93,6 +93,11 @@ i18n.default_language = en
 module.static=github.com/revel/revel/modules/static
 
 
+db.import = "github.com/coopernurse/gorp"
+db.driver = "mysql"
+db.spec   = "root@/applift_development"
+
+module.db = github.com/revel/revel/modules/db
 
 ################################################################################
 # Section: dev
@@ -126,12 +131,16 @@ module.testrunner = github.com/revel/revel/modules/testrunner
 
 
 # Where to log the various Revel logs
-log.trace.output = off
+log.trace.output = false
 log.info.output  = stderr
 log.warn.output  = stderr
 log.error.output = stderr
 
+log.trace.prefix = "TRACE "
+log.info.prefix  = "INFO  "
 
+# Custom attributes
+dev.var = true
 
 ################################################################################
 # Section: prod
